--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.1",
     "react-scripts": "0.9.5",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
